css/overrides/dialog-off-canvas-reset.css
#drupal-off-canvas-wrapper > div:not(.ui-resizable-handle,.ui-dialog-titlebar) *:where(:not(details *, [data-drupal-messages] *, svg, svg *, .ck-reset *, [data-drupal-ck-style-fence] *, .ui-resizable-handle)),
#drupal-off-canvas-wrapper *:where(.ui-dialog-titlebar *:not(svg, svg *))
{
  all: revert;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  line-height: 1.4;
}

#drupal-off-canvas-wrapper > div:not(.ui-resizable-handle,.ui-dialog-titlebar) *:where(:not(details *, [data-drupal-messages] *, svg, svg *, .ck-reset *, [data-drupal-ck-style-fence] *, .ui-resizable-handle)):after,
#drupal-off-canvas-wrapper > div:not(.ui-resizable-handle,.ui-dialog-titlebar) *:where(:not(details *, [data-drupal-messages] *, svg, svg *, .ck-reset *, [data-drupal-ck-style-fence] *, .ui-resizable-handle)):before,
#drupal-off-canvas-wrapper *:where(.ui-dialog-titlebar *:not(svg, svg *)):before,
#drupal-off-canvas-wrapper *:where(.ui-dialog-titlebar *:not(svg, svg *)):after
{
  all: revert;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

/**
 * Set base styles for the off-canvas dialog.
 * @internal


#drupal-off-canvas-wrapper *:where(:not(svg, svg *, .ck-reset *, [data-drupal-ck-style-fence] *, .ui-resizable-handle)) {
  all: revert;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  line-height: 1.4;
}

#drupal-off-canvas-wrapper *:where(:not(svg, svg *, .ck-reset *, [data-drupal-ck-style-fence] *, .ui-resizable-handle)):after,
#drupal-off-canvas-wrapper *:where(:not(svg, svg *, .ck-reset *, [data-drupal-ck-style-fence] *, .ui-resizable-handle)):before {
  all: revert;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}
*/

#drupal-off-canvas-wrapper *:not('details') a,
#drupal-off-canvas-wrapper *:not('details') .link {
  text-decoration: none;
  color: var(--off-canvas-link-color);
}

#drupal-off-canvas-wrapper *:not('details') hr {
  height: 1px;
  background: var(--off-canvas-border-color);
}

#drupal-off-canvas-wrapper *:not('details') h1,
#drupal-off-canvas-wrapper .heading-a {
  font-size: 1.4375rem;
  line-height: 1.2;
}

#drupal-off-canvas-wrapper *:not('details') h2,
#drupal-off-canvas-wrapper .heading-b {
  margin: var(--off-canvas-vertical-spacing-unit) 0;
  font-size: 1.1875rem;
}

#drupal-off-canvas-wrapper *:not('details') h3,
#drupal-off-canvas-wrapper .heading-c {
  margin: var(--off-canvas-vertical-spacing-unit) 0;
  /* font-size: 1.0625rem; */

}

#drupal-off-canvas-wrapper *:not('details') h4,
#drupal-off-canvas-wrapper .heading-d {
  margin: var(--off-canvas-vertical-spacing-unit) 0;
  font-size: 1rem;
}

#drupal-off-canvas-wrapper *:not('details') h5,
#drupal-off-canvas-wrapper .heading-e,
#drupal-off-canvas-wrapper *:not('details') h6,
#drupal-off-canvas-wrapper .heading-f {
  margin: var(--off-canvas-vertical-spacing-unit) 0;
  font-size: 0.9375rem;
}

#drupal-off-canvas-wrapper *:not('details') p {
  margin: var(--off-canvas-vertical-spacing-unit) 0;
}

#drupal-off-canvas-wrapper *:not('details') img {
  max-width: 100%;
  height: auto;
}

#drupal-off-canvas-wrapper *:not('details') .links {
  margin: 0;
  padding: 0;
  list-style: none;
}

#drupal-off-canvas-wrapper *:not('details') .links li {
  margin: calc(var(--off-canvas-vertical-spacing-unit) /2) 0;
}

.archipelago-subtheme #drupal-off-canvas-wrapper summary {
  margin: 1rem 0.5rem;
}

.archipelago-subtheme #drupal-off-canvas-wrapper .fieldset, #drupal-off-canvas-wrapper fieldset {
  border:none;
}

.archipelago-subtheme #drupal-off-canvas-wrapper table {
  margin: 1rem 0;
  width: 100%;
}

